<resources>
    <string name="app_name">AndroidShopProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strBtnAddProduct">Добавить товар</string>
    <string name="strBtnEditProduct">Изменить товар</string>
    <string name="strBtnOk">Ок</string>
    <string name="strBtnCancel">Отмена</string>
    <string name="strBtnSave">Сохранить</string>
    <string name="strTxtProdName">Название товара</string>
    <string name="strTxtProdDescr">Описание товара</string>
    <string name="strTxtProdPrice">Цена товара</string>
    <string name="strBtnOpenProducts">Список товаров</string>
    <string name="strBtnBack">Назад</string>
    <string name="strBtnExit">Выход</string>
    <string name="strBtnAddOrder">Создать заказ</string>
    <string name="strTxtProdQuant">Количество товара</string>
    <string name="strBtnAdd">Добавить</string>
    <string name="strBtnAddPurch">Добавить товар</string>
    <string name="strTxtProdCnt">Товаров:</string>
    <string name="strTxtProdSum">На сумму:</string>
    <string name="strTxtHeader">Заказ</string>
    <string name="strBtnOpenOrders">Список заказов</string>
    <string name="strTxtHeaderDate">Дата заказа</string>
    <string name="strBtnDelete">Удалить</string>
</resources>
